feat(nl-74): fix checkstyle and sonar errors